--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+alembic==0.9.9
+arrow==0.3.3
 astral==1.6.1
 backports.functools-lru-cache==1.5
 blinker==1.3
@@ -5,17 +7,24 @@ certifi==2018.4.16
 chardet==3.0.4
 Flask==0.10.1
 Flask-DebugToolbar==0.10.0
+Flask-Login==0.4.1
+Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.0
+Flask-WTF==0.14.2
+gunicorn==19.8.1
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.7.3
+Mako==1.0.7
 MarkupSafe==0.23
 pkg-resources==0.0.0
 psycopg2==2.6.1
 python-dateutil==2.7.2
+python-editor==1.0.3
 pytz==2018.4
 requests==2.18.4
 six==1.11.0
 SQLAlchemy==1.0.3
 urllib3==1.22
 Werkzeug==0.10.4
+WTForms==2.1
