--- a/requirements.txt
+++ b/requirements.txt
@@ -5,26 +5,37 @@ backports.functools-lru-cache==1.5
 blinker==1.3
 certifi==2018.4.16
 chardet==3.0.4
+cheroot==6.3.1
+CherryPy==15.0.0
 Flask==0.10.1
 Flask-DebugToolbar==0.10.0
 Flask-Login==0.4.1
 Flask-Migrate==2.1.1
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.14.2
+glob2==0.6
 gunicorn==19.8.1
 idna==2.6
 itsdangerous==0.24
+jasmine==3.1.0
+jasmine-core==3.1.0
 Jinja2==2.7.3
 Mako==1.0.7
 MarkupSafe==0.23
+more-itertools==4.2.0
+ordereddict==1.1
 pkg-resources==0.0.0
+portend==2.2
 psycopg2==2.6.1
 python-dateutil==2.7.2
 python-editor==1.0.3
 pytz==2018.4
+PyYAML==3.10
 requests==2.18.4
+selenium==3.12.0
 six==1.11.0
 SQLAlchemy==1.0.3
+tempora==1.11
 urllib3==1.22
 Werkzeug==0.10.4
 WTForms==2.1
